# openfleet

./: .env.example  .fleet-base-intervals.json  .fleet-config-watcher.json  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
.aicp/: state.yaml
.claude/: settings.json
config/: agent-autonomy.yaml  agent-crons.yaml  agent-hooks.yaml  agent-identities.yaml  agent-tooling.yaml  fleet-identity.yaml  fleet.yaml  methodology.yaml  phases.yaml  plugin-evaluation.yaml  projects.yaml  skill-stage-mapping.yaml  standing-orders.yaml  synergy-matrix.yaml  tool-chains.yaml  tool-roles.yaml  url-templates.yaml
docs/: ARCHITECTURE.md  INTEGRATION.md  MIGRATION-UBUNTU24.md  README.md  SPEC-TO-CODE.md  WORK-BACKLOG.md  vibe-managing-wiki.md  vibe-managing.md
fleet/: __init__.py  __main__.py
gateway/: Dockerfile  __main__.py  executor.py  operations.py  setup.py  ws_server.py
patches/: 0005-FleetControlBar.tsx  0005-fleet-control-bar-shell.patch  0006-FleetEventStream.tsx  0006-FleetHealthPanel.tsx  0007-migration-rename-session-id.py  0007-rename-openclaw-session-id.patch  0008-remove-openclaw-frontend-branding.patch  0009-fix-remaining-openclaw-branding.patch  0011-heartbeat-message-suffix.patch  0012-per-agent-offline-after.patch
scripts/: apply-fleet-ui.sh  apply-patches.sh  clean-gateway-config.sh  clean-stale-agents.sh  configure-agent-settings.sh  configure-auth.sh  configure-board.sh  configure-channel.sh  configure-openclaw.sh  create-task.sh  dispatch-task.sh  fleet-digest.sh  fleet-monitor-check.sh  (+36 more)
(+683 files in other folders)
